# pyafv

./: .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_PyPI.md  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  codecov.yml
.github/workflows/: docker.yml  joss.yml  publish-to-pypi.yml  tests.yml  tests_all_platform.yml  zenodo-display.yml
afv/: __init__.py  backend.py  cell_geom.pyx  finite_voronoi.py  finite_voronoi_fallback.py  finite_voronoi_fast.py  physical_params.py  simulator.py
docs/: .readthedocs.yaml  README.md  api.rst  calibration.rst  citation.rst  conf.py  contributing.rst  examples.rst  index.rst  main.bib  multiprocessing.rst  performance.rst  requirements.txt  usage.rst
docs/_ext/: subst_release.py
docs/api/: ParallelFiniteVoronoiSimulator.rst  PhysicalParams.rst  experimental.rst  index.rst  pyafv.FiniteVoronoiSimulator.rst  pyafv.PhysicalParams.rst  pyafv.rst  target_delta.rst  visualize_2d.rst  visualize_2d_parallel.rst
docs/api/calibrate/: DeformablePolygonSimulator.rst  auto_calibrate.rst  index.rst  tools.rst
docs/paper/: Makefile  codemeta.json  paper.bib  paper.md
examples/: MPI_wrap.py  README.md  active_FV.py  calibrate_DP.py  connections.py  multiprocessing.py  relaxation.py
examples/jupyter/: custom_plot.ipynb  periodic_plotting.ipynb
pyafv/: __init__.py  _connectutil.py  _plotutils.py  _version.py  backend.py  cell_geom.cpp  cell_geom.pyx  cell_geom_fallback.py  finite_voronoi.py  finite_voronoi_fallback.py  finite_voronoi_fast.py  parallel_voronoi.py  physical_params.py  simulator.py
pyafv/calibrate/: __init__.py  core.py  deformable_polygon.py
tests/: conftest.py  test_bench_asarray.py  test_bench_build.py  test_bench_decompose_points.py  test_bench_parallel_build.py  test_benchmarks.py  test_calibrate.py  test_core.py  test_geom.py  test_parallel.py  test_vary_A0.py
tests/data/: pts_at_error.npy  varying_A0.csv  varying_A0_forces.csv
