[build-system]
requires = ["setuptools>=64", "cython>=3.0", "numpy>=1.26.4"]
build-backend = "setuptools.build_meta"

[project]
name = "pyafv"
version = "0.3.3"
description = "Python implementation of the active-finite-Voronoi (AFV) model"
readme = "README_PyPI.md"
authors = [
    { name = "Wei Wang (汪巍)", email = "ww000721@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"] # Explicitly include the file
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "matplotlib>=3.8.4",
]

[project.urls]
"Download" = "https://pypi.org/project/pyafv/#files"
"Source Code" = "https://github.com/wwang721/pyafv"

[project.optional-dependencies]
examples = [
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.setuptools]
packages = ["pyafv"]  # optional but explicit

[tool.setuptools.exclude-package-data]
pyafv = ["*.pyx"]  # exclude from the installation wheel

[tool.pytest.ini_options]
testpaths = ["tests"]
# pythonpath = ["."]  # not needed if package is installed
# filter warnings from matplotlib about pyparsing
filterwarnings = [
    "ignore:'oneOf' deprecated:DeprecationWarning",
    "ignore:'parseString' deprecated:DeprecationWarning",
    "ignore:'resetCache' deprecated:DeprecationWarning",
    "ignore:'enablePackrat' deprecated:DeprecationWarning"
]
