[build-system]
requires = ["hatchling", "hatch-cython", "numpy>=1.26.4"]
build-backend = "hatchling.build"

[project]
name = "pyafv"
dynamic = ["version"]
description = "Python implementation of the active-finite-Voronoi (AFV) model"
readme = "README.md"
authors = [
    { name = "Wei Wang" },
    { email = "ww000721@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]  # Explicitly include the file
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "matplotlib>=3.8.4",
]

keywords = ["voronoi-model", "cellular-patterns", "biological-modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://pyafv.github.io"
"Download" = "https://pypi.org/project/pyafv/#files"
"Source Code" = "https://github.com/wwang721/pyafv"
"Documentation" = "https://pyafv.readthedocs.io/"
"Changelog" = "https://github.com/wwang721/pyafv/releases/latest"

[project.optional-dependencies]
examples = [
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-benchmark[histogram]>=5.1.0",
]

[tool.setuptools]
packages = ["pyafv"]

[tool.hatch.version]
path = "pyafv/_version.py"

[tool.hatch.build.targets.wheel]
exclude = ["*.pyx", "*.c", "*.cpp"]  # exclude from the installation wheel

[tool.hatch.build.targets.wheel.hooks.cython.options]
include_numpy = true
compile_py = false
cythonize_kwargs = { build_dir = "build" }
directives = { boundscheck = false, wraparound = false, language_level = 3}

[tool.hatch.build.targets.sdist]
# Exclude from .tar.gz source distribution
exclude = ["assets/", "docs/", "examples/jupyter/", "*.md", ".*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--benchmark-skip"  # skip benchmarks by default
# pythonpath = ["."]  # not needed if package is installed
# filter warnings from matplotlib about pyparsing
filterwarnings = [
    "ignore:'oneOf' deprecated:DeprecationWarning",
    "ignore:'parseString' deprecated:DeprecationWarning",
    "ignore:'resetCache' deprecated:DeprecationWarning",
    "ignore:'enablePackrat' deprecated:DeprecationWarning"
]
